fix: Update GitHub username from amitrath to amitbikrath in CloudFormation template
- Update GitHubOrg parameter default value
- Update CloudFormation deployment links
- Ensure template matches actual GitHub repository owner

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -4,7 +4,7 @@ Description: 'Bootstrap IAM Role for Akara Studio GitHub Actions OIDC Deployment
 Parameters:
   GitHubOrg:
     Type: String
-    Default: 'amitrath'
+    Default: 'amitbikrath'
     Description: 'GitHub organization or username'
   GitHubRepo:
     Type: String
