fix: Update IAM trust policy to allow all workflows in repository
- Change StringLike condition from specific refs to 'repo:amitbikrath/akara-aws-deploy:*'
- Allow workflow_dispatch and any merge commits to assume the role
- Fix OIDC authentication issues for GitHub Actions workflows

This resolves the deployment workflow authentication failures.

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -48,10 +48,7 @@ Resources:
               StringEquals:
                 'token.actions.githubusercontent.com:aud': sts.amazonaws.com
               StringLike:
-                'token.actions.githubusercontent.com:sub': 
-                  - !Sub 'repo:${GitHubOrg}/${GitHubRepo}:ref:refs/heads/main'
-                  - !Sub 'repo:${GitHubOrg}/${GitHubRepo}:ref:refs/heads/develop'
-                  - !Sub 'repo:${GitHubOrg}/${GitHubRepo}:pull_request'
+                'token.actions.githubusercontent.com:sub': !Sub 'repo:${GitHubOrg}/${GitHubRepo}:*'
       ManagedPolicyArns:
         - !Ref AkaraDeploymentPolicy
       Tags:
