--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,44 +111,73 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-session-name: GitHubActions-${{ github.run_id }}
 
-      - name: Setup Terraform
+      - name: Ensure Terraform backend (S3 + DynamoDB)
+        shell: bash
+        env:
+          AWS_REGION: us-east-1
+          TF_STATE_BUCKET: akara-terraform-state
+          TF_LOCK_TABLE: akara-tf-locks
+        run: |
+          set -euo pipefail
+
+          # Create S3 bucket if missing
+          if ! aws s3api head-bucket --bucket "$TF_STATE_BUCKET" 2>/dev/null; then
+            if [ "$AWS_REGION" = "us-east-1" ]; then
+              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --region "$AWS_REGION"
+            else
+              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --region "$AWS_REGION" --create-bucket-configuration LocationConstraint="$AWS_REGION"
+            fi
+            aws s3api put-bucket-versioning --bucket "$TF_STATE_BUCKET" --versioning-configuration Status=Enabled
+            aws s3api put-bucket-encryption --bucket "$TF_STATE_BUCKET" --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
+            aws s3api put-public-access-block --bucket "$TF_STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
+          fi
+
+          # Create DynamoDB lock table if missing
+          if ! aws dynamodb describe-table --table-name "$TF_LOCK_TABLE" >/dev/null 2>&1; then
+            aws dynamodb create-table \
+              --table-name "$TF_LOCK_TABLE" \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
+              --billing-mode PAY_PER_REQUEST
+            aws dynamodb wait table-exists --table-name "$TF_LOCK_TABLE"
+          fi
+
+      - name: Terraform setup
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
           terraform_wrapper: false
 
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
+      - name: Terraform init (reconfigure)
+        env:
+          TF_LOG: INFO
+        run: terraform -chdir=infra/terraform init -reconfigure -input=false
 
-      - name: Terraform Plan
-        working-directory: infra
-        run: |
-          terraform plan \
-            -var="environment=${{ needs.setup.outputs.environment }}" \
-            -var="project_name=${{ env.PROJECT_NAME }}" \
-            -var="aws_region=${{ env.AWS_REGION }}" \
-            -out=tfplan
+      - name: Terraform validate
+        run: terraform -chdir=infra/terraform validate
 
-      - name: Terraform Apply
-        working-directory: infra
-        run: terraform apply tfplan
+      - name: Terraform plan
+        run: terraform -chdir=infra/terraform plan -out=tfplan -input=false -no-color \
+          -var="environment=${{ needs.setup.outputs.environment }}" \
+          -var="project_name=${{ env.PROJECT_NAME }}" \
+          -var="aws_region=${{ env.AWS_REGION }}"
+
+      - name: Terraform apply
+        run: terraform -chdir=infra/terraform apply -auto-approve tfplan -input=false -no-color
 
       - name: Get Terraform Outputs
         id: tf_output
-        working-directory: infra
         run: |
-          echo "s3_bucket_frontend=$(terraform output -raw s3_bucket_public)" >> $GITHUB_OUTPUT
-          echo "s3_bucket_media=$(terraform output -raw s3_bucket_media)" >> $GITHUB_OUTPUT
-          echo "cloudfront_id=$(terraform output -raw cloudfront_distribution_id)" >> $GITHUB_OUTPUT
-          echo "cloudfront_domain=$(terraform output -raw cloudfront_domain_name)" >> $GITHUB_OUTPUT
-          echo "cognito_user_pool_id=$(terraform output -raw cognito_user_pool_id)" >> $GITHUB_OUTPUT
-          echo "cognito_client_id=$(terraform output -raw cognito_client_id)" >> $GITHUB_OUTPUT
+          echo "s3_bucket_frontend=$(terraform -chdir=infra/terraform output -raw s3_bucket_public)" >> $GITHUB_OUTPUT
+          echo "s3_bucket_media=$(terraform -chdir=infra/terraform output -raw s3_bucket_media)" >> $GITHUB_OUTPUT
+          echo "cloudfront_id=$(terraform -chdir=infra/terraform output -raw cloudfront_distribution_id)" >> $GITHUB_OUTPUT
+          echo "cloudfront_domain=$(terraform -chdir=infra/terraform output -raw cloudfront_domain_name)" >> $GITHUB_OUTPUT
+          echo "cognito_user_pool_id=$(terraform -chdir=infra/terraform output -raw cognito_user_pool_id)" >> $GITHUB_OUTPUT
+          echo "cognito_client_id=$(terraform -chdir=infra/terraform output -raw cognito_client_id)" >> $GITHUB_OUTPUT
 
       - name: Save Infrastructure Outputs
-        working-directory: infra
         run: |
-          terraform output -json > ../infrastructure-outputs.json
+          terraform -chdir=infra/terraform output -json > infrastructure-outputs.json
           
       - name: Upload Infrastructure Outputs
         uses: actions/upload-artifact@v4
