--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,28 +111,41 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-session-name: GitHubActions-${{ github.run_id }}
 
+      - name: Show caller identity
+        run: aws sts get-caller-identity
+
+      - name: Enable bash tracing
+        run: echo "BASH_ENV=$GITHUB_WORKSPACE/.bashenv" >> $GITHUB_ENV && echo "set -euxo pipefail" > .bashenv
+
+      - name: Resolve AWS identity and derive backend names
+        id: awsinfo
+        shell: bash
+        run: |
+          set -euo pipefail
+          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          REGION="us-east-1"
+          # globally-unique bucket
+          echo "TF_STATE_BUCKET=akara-tf-state-${ACCOUNT_ID}-${REGION}" >> $GITHUB_OUTPUT
+          echo "TF_LOCK_TABLE=akara-tf-locks-${ACCOUNT_ID}-${REGION}" >> $GITHUB_OUTPUT
+
       - name: Ensure Terraform backend (S3 + DynamoDB)
         shell: bash
         env:
           AWS_REGION: us-east-1
-          TF_STATE_BUCKET: akara-terraform-state
-          TF_LOCK_TABLE: akara-tf-locks
+          TF_STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
+          TF_LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
         run: |
           set -euo pipefail
-
-          # Create S3 bucket if missing
           if ! aws s3api head-bucket --bucket "$TF_STATE_BUCKET" 2>/dev/null; then
             if [ "$AWS_REGION" = "us-east-1" ]; then
-              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --region "$AWS_REGION"
+              aws s3api create-bucket --bucket "$TF_STATE_BUCKET"
             else
-              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --region "$AWS_REGION" --create-bucket-configuration LocationConstraint="$AWS_REGION"
+              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --create-bucket-configuration LocationConstraint="$AWS_REGION"
             fi
             aws s3api put-bucket-versioning --bucket "$TF_STATE_BUCKET" --versioning-configuration Status=Enabled
             aws s3api put-bucket-encryption --bucket "$TF_STATE_BUCKET" --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
             aws s3api put-public-access-block --bucket "$TF_STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
           fi
-
-          # Create DynamoDB lock table if missing
           if ! aws dynamodb describe-table --table-name "$TF_LOCK_TABLE" >/dev/null 2>&1; then
             aws dynamodb create-table \
               --table-name "$TF_LOCK_TABLE" \
@@ -149,9 +162,15 @@ jobs:
           terraform_wrapper: false
 
       - name: Terraform init (reconfigure)
-        env:
-          TF_LOG: INFO
-        run: terraform -chdir=infra/terraform init -reconfigure -input=false
+        run: |
+          set -euo pipefail
+          terraform -chdir=infra/terraform init -reconfigure \
+            -backend-config="bucket=${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}" \
+            -backend-config="key=global/terraform.tfstate" \
+            -backend-config="region=us-east-1" \
+            -backend-config="dynamodb_table=${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}" \
+            -backend-config="encrypt=true" \
+            -input=false
 
       - name: Terraform validate
         run: terraform -chdir=infra/terraform validate
@@ -184,6 +203,15 @@ jobs:
         with:
           name: infrastructure-outputs-${{ needs.setup.outputs.environment }}
           path: infrastructure-outputs.json
+
+      - name: Upload logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: infra-logs
+          path: |
+            infra/terraform/.terraform
+            infra/terraform/terraform.tfstate*
 
   # Build and Deploy Frontend
   deploy-frontend:
