--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,7 +112,9 @@ jobs:
         run: aws sts get-caller-identity
 
       - name: Enable bash tracing
-        run: echo "BASH_ENV=$GITHUB_WORKSPACE/.bashenv" >> $GITHUB_ENV && echo "set -euxo pipefail" > .bashenv
+        run: |
+          echo "BASH_ENV=$GITHUB_WORKSPACE/.bashenv" >> $GITHUB_ENV
+          echo "set -euxo pipefail" > .bashenv
 
       - name: Preflight: show dirs/files
         shell: bash
