fix: Remove colon from YAML step name to resolve syntax error
- Change 'Preflight: show dirs/files' to 'Preflight show dirs and files'
- Resolve YAML scanner error 'mapping values are not allowed here'
- YAML validation now passes successfully
- Workflow ready for execution

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,7 +116,7 @@ jobs:
           echo "BASH_ENV=$GITHUB_WORKSPACE/.bashenv" >> $GITHUB_ENV
           echo "set -euxo pipefail" > .bashenv
 
-      - name: Preflight: show dirs/files
+      - name: Preflight show dirs and files
         shell: bash
         run: |
           set -euo pipefail
