--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -126,17 +126,20 @@ jobs:
           ls -la infra || true
           echo "---- infra/terraform ----"
           ls -la infra/terraform || true
+          echo "---- git status ----"
+          git status --porcelain
 
       - name: Resolve AWS identity and derive backend names
         id: awsinfo
         shell: bash
         run: |
           set -euo pipefail
-          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
-          REGION="us-east-1"
-          # globally-unique bucket
-          echo "TF_STATE_BUCKET=akara-tf-state-${ACCOUNT_ID}-${REGION}" >> $GITHUB_OUTPUT
-          echo "TF_LOCK_TABLE=akara-tf-locks-${ACCOUNT_ID}-${REGION}" >> $GITHUB_OUTPUT
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          AWS_REGION=${{ env.AWS_REGION || 'us-east-1' }}
+          echo "ACCOUNT_ID=$ACCOUNT_ID" >> $GITHUB_OUTPUT
+          echo "AWS_REGION=$AWS_REGION" >> $GITHUB_OUTPUT
+          echo "TF_STATE_BUCKET=akara-tf-state-${ACCOUNT_ID}-${AWS_REGION}" >> $GITHUB_OUTPUT
+          echo "TF_LOCK_TABLE=akara-tf-locks-${ACCOUNT_ID}-${AWS_REGION}" >> $GITHUB_OUTPUT
 
       - name: Export TF vars
         shell: bash
@@ -149,12 +152,21 @@ jobs:
       - name: Ensure Terraform backend (S3 + DynamoDB)
         shell: bash
         env:
-          AWS_REGION: us-east-1
+          ACCOUNT_ID: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
+          AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
           TF_STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
           TF_LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
         run: |
           set -euo pipefail
+          echo "Creating backend resources:"
+          echo "  Account: $ACCOUNT_ID"
+          echo "  Region: $AWS_REGION"
+          echo "  Bucket: $TF_STATE_BUCKET"
+          echo "  Table: $TF_LOCK_TABLE"
+          
+          # Create S3 bucket if missing
           if ! aws s3api head-bucket --bucket "$TF_STATE_BUCKET" 2>/dev/null; then
+            echo "Creating S3 bucket: $TF_STATE_BUCKET"
             if [ "$AWS_REGION" = "us-east-1" ]; then
               aws s3api create-bucket --bucket "$TF_STATE_BUCKET"
             else
@@ -163,14 +175,21 @@ jobs:
             aws s3api put-bucket-versioning --bucket "$TF_STATE_BUCKET" --versioning-configuration Status=Enabled
             aws s3api put-bucket-encryption --bucket "$TF_STATE_BUCKET" --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
             aws s3api put-public-access-block --bucket "$TF_STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
+          else
+            echo "S3 bucket already exists: $TF_STATE_BUCKET"
           fi
+          
+          # Create DynamoDB lock table if missing
           if ! aws dynamodb describe-table --table-name "$TF_LOCK_TABLE" >/dev/null 2>&1; then
+            echo "Creating DynamoDB table: $TF_LOCK_TABLE"
             aws dynamodb create-table \
               --table-name "$TF_LOCK_TABLE" \
               --attribute-definitions AttributeName=LockID,AttributeType=S \
               --key-schema AttributeName=LockID,KeyType=HASH \
               --billing-mode PAY_PER_REQUEST
             aws dynamodb wait table-exists --table-name "$TF_LOCK_TABLE"
+          else
+            echo "DynamoDB table already exists: $TF_LOCK_TABLE"
           fi
 
       - name: Terraform setup
@@ -179,14 +198,29 @@ jobs:
           terraform_version: ${{ env.TF_VERSION }}
           terraform_wrapper: false
 
+      - name: Terraform version
+        run: terraform -version
+
+      - name: Terraform fmt check
+        run: terraform -chdir=infra/terraform fmt -check -diff || true
+
       - name: Terraform init (reconfigure)
+        env:
+          TF_STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
+          TF_LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
+          AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
         run: |
           set -euo pipefail
+          echo "Initializing Terraform with backend:"
+          echo "  Bucket: $TF_STATE_BUCKET"
+          echo "  Table: $TF_LOCK_TABLE"
+          echo "  Region: $AWS_REGION"
+          
           terraform -chdir=infra/terraform init -reconfigure \
-            -backend-config="bucket=${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}" \
+            -backend-config="bucket=$TF_STATE_BUCKET" \
             -backend-config="key=global/terraform.tfstate" \
-            -backend-config="region=us-east-1" \
-            -backend-config="dynamodb_table=${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}" \
+            -backend-config="region=$AWS_REGION" \
+            -backend-config="dynamodb_table=$TF_LOCK_TABLE" \
             -backend-config="encrypt=true" \
             -input=false
 
@@ -194,13 +228,14 @@ jobs:
         run: terraform -chdir=infra/terraform validate
 
       - name: Terraform plan
-        run: terraform -chdir=infra/terraform plan -out=tfplan -input=false -no-color \
-          -var="environment=${{ needs.setup.outputs.environment }}" \
-          -var="project_name=${{ env.PROJECT_NAME }}" \
-          -var="aws_region=${{ env.AWS_REGION }}"
+        env:
+          TF_VAR_account_id: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
+          TF_VAR_region: ${{ steps.awsinfo.outputs.AWS_REGION }}
+          TF_VAR_project: ${{ env.PROJECT_NAME }}
+        run: terraform -chdir=infra/terraform plan -input=false -no-color -out=plan.out
 
       - name: Terraform apply
-        run: terraform -chdir=infra/terraform apply -auto-approve tfplan -input=false -no-color
+        run: terraform -chdir=infra/terraform apply -auto-approve plan.out -input=false -no-color
 
       - name: Get Terraform Outputs
         id: tf_output
@@ -219,14 +254,34 @@ jobs:
           name: infrastructure-outputs-${{ needs.setup.outputs.environment }}
           path: infrastructure-outputs.json
 
-      - name: Upload TF artifacts (if present)
-        if: failure() && hashFiles('infra/terraform/.terraform/**') != ''
+      - name: Create failure logs
+        if: failure()
+        run: |
+          echo "=== FAILURE DIAGNOSTICS ===" > failure-logs.txt
+          echo "Date: $(date)" >> failure-logs.txt
+          echo "PWD: $(pwd)" >> failure-logs.txt
+          echo "Account: ${{ steps.awsinfo.outputs.ACCOUNT_ID || 'unknown' }}" >> failure-logs.txt
+          echo "Region: ${{ steps.awsinfo.outputs.AWS_REGION || 'unknown' }}" >> failure-logs.txt
+          echo "" >> failure-logs.txt
+          echo "=== DIRECTORY STRUCTURE ===" >> failure-logs.txt
+          ls -la >> failure-logs.txt 2>&1 || true
+          echo "" >> failure-logs.txt
+          ls -la infra/terraform >> failure-logs.txt 2>&1 || true
+          echo "" >> failure-logs.txt
+          echo "=== TERRAFORM FILES ===" >> failure-logs.txt
+          find infra/terraform -name "*.tf" -exec echo "--- {} ---" \; -exec cat {} \; >> failure-logs.txt 2>&1 || true
+
+      - name: Upload failure logs and artifacts
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: infra-logs
+          name: infra-failure-logs-${{ github.run_id }}
           path: |
-            infra/terraform/.terraform
+            failure-logs.txt
+            infra/terraform/.terraform/**
+            infra/terraform/plan.out
             infra/terraform/terraform.tfstate*
+          if-no-files-found: ignore
 
   # Build and Deploy Frontend
   deploy-frontend:
