--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -101,6 +101,23 @@ Resources:
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*/*'
 
+          # Terraform State Backend S3 Permissions
+          - Sid: TerraformStateBackendS3
+            Effect: Allow
+            Action:
+              - s3:ListBucket
+            Resource:
+              - arn:aws:s3:::akara-tf-state-*
+          
+          - Sid: TerraformStateBackendS3Objects
+            Effect: Allow
+            Action:
+              - s3:GetObject
+              - s3:PutObject
+              - s3:DeleteObject
+            Resource:
+              - arn:aws:s3:::akara-tf-state-*/*
+
           # CloudFront Permissions
           - Sid: CloudFrontManagement
             Effect: Allow
@@ -143,6 +160,24 @@ Resources:
             Resource:
               - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/${ProjectName}-*'
               - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/${ProjectName}-*/index/*'
+
+          # Terraform Lock Table Access
+          - Sid: TerraformLockTableAccess
+            Effect: Allow
+            Action:
+              - dynamodb:DescribeTable
+              - dynamodb:GetItem
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
+            Resource:
+              - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/akara-tf-locks-*'
+
+          - Sid: TerraformLockTableCreate
+            Effect: Allow
+            Action:
+              - dynamodb:CreateTable
+            Resource: "*"
 
           # Cognito Permissions
           - Sid: CognitoManagement
