--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -87,6 +87,8 @@ Resources:
               - s3:PutBucketWebsite
               - s3:GetBucketNotification
               - s3:PutBucketNotification
+              - s3:GetBucketTagging
+              - s3:PutBucketTagging
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
