--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -89,6 +89,9 @@ Resources:
               - s3:PutBucketNotification
               - s3:GetBucketTagging
               - s3:PutBucketTagging
+              - s3:GetBucketAcl
+              - s3:PutBucketAcl
+              - s3:PutBucketOwnershipControls
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
@@ -119,6 +122,14 @@ Resources:
               - s3:DeleteObject
             Resource:
               - arn:aws:s3:::akara-tf-state-*/*
+
+          # Terraform State Bucket ACL Read
+          - Sid: TerraformStateBucketAclRead
+            Effect: Allow
+            Action:
+              - s3:GetBucketAcl
+            Resource:
+              - arn:aws:s3:::akara-tf-state-*
 
           # CloudFront Permissions
           - Sid: CloudFrontManagement
