chore(iam): allow S3 bucket CORS get/put on project buckets

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -92,6 +92,8 @@ Resources:
               - s3:GetBucketAcl
               - s3:PutBucketAcl
               - s3:PutBucketOwnershipControls
+              - s3:GetBucketCors
+              - s3:PutBucketCors
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
