chore(iam): consolidate Terraform state S3 permissions to reduce policy size
- Combine multiple Terraform state statements into two consolidated statements
- Add s3:GetEncryptionConfiguration for project buckets
- Reduce policy size to stay under CloudFormation 6144 char limit
- Maintain all required permissions for Terraform backend operations

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -120,15 +120,18 @@ Resources:
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*/*'
 
-          # Terraform State Backend S3 Permissions
-          - Sid: TerraformStateBackendS3
+          # Terraform State Backend (consolidated)
+          - Sid: TerraformStateBackend
             Effect: Allow
             Action:
               - s3:ListBucket
+              - s3:GetBucketAcl
+              - s3:GetEncryptionConfiguration
+              - s3:GetBucketEncryption
             Resource:
               - arn:aws:s3:::akara-tf-state-*
           
-          - Sid: TerraformStateBackendS3Objects
+          - Sid: TerraformStateObjects
             Effect: Allow
             Action:
               - s3:GetObject
@@ -136,23 +139,6 @@ Resources:
               - s3:DeleteObject
             Resource:
               - arn:aws:s3:::akara-tf-state-*/*
-
-          # Terraform State Bucket ACL Read
-          - Sid: TerraformStateBucketAclRead
-            Effect: Allow
-            Action:
-              - s3:GetBucketAcl
-            Resource:
-              - arn:aws:s3:::akara-tf-state-*
-
-          # Terraform State Encryption Read
-          - Sid: TerraformStateEncryptionRead
-            Effect: Allow
-            Action:
-              - s3:GetEncryptionConfiguration
-              - s3:GetBucketEncryption
-            Resource:
-              - arn:aws:s3:::akara-tf-state-*
 
           # CloudFront Permissions
           - Sid: CloudFrontManagement
