chore(iam): add S3 object lock get/put for project buckets

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -106,6 +106,8 @@ Resources:
               - s3:PutReplicationConfiguration
               - s3:GetBucketRequestPayment
               - s3:PutBucketRequestPayment
+              - s3:GetObjectLockConfiguration
+              - s3:PutObjectLockConfiguration
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
