chore(iam): allow S3 accelerate get/put on project buckets

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -73,6 +73,8 @@ Resources:
               - s3:*Bucket*
               - s3:ListBucket
               - s3:GetBucketLocation
+              - s3:GetAccelerateConfiguration
+              - s3:PutAccelerateConfiguration
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
