chore(iam): add s3:GetBucketRequestPayment for project buckets
- Add missing s3:GetBucketRequestPayment permission to S3BucketManagement statement
- Resolves 403 errors during Terraform bucket configuration reads
- Policy now covers all comprehensive S3 bucket-level operations
- CloudFormation stack updated successfully

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -96,6 +96,7 @@ Resources:
               # object lock & lifecycle & ownership controls
               - s3:GetObjectLockConfiguration
               - s3:GetLifecycleConfiguration
+              - s3:GetBucketRequestPayment
               # allow bucket create/delete for our project buckets
               - s3:CreateBucket
               - s3:DeleteBucket
