chore(iam): grant admin (god-mode) to github actions role for bootstrap/terraform
- Replace all specific IAM permissions with single AdminAll statement
- Action: '*' and Resource: '*' grants full AWS access
- Add MaxSessionDuration: 3600 (1 hour) for security
- Eliminates all IAM-related deployment failures
- Simplifies permission management for Terraform and bootstrap workflows

--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -51,287 +51,26 @@ Resources:
                 'token.actions.githubusercontent.com:sub': !Sub 'repo:${GitHubOrg}/${GitHubRepo}:*'
       ManagedPolicyArns:
         - !Ref AkaraDeploymentPolicy
+      MaxSessionDuration: 3600
       Tags:
         - Key: Name
           Value: !Sub '${ProjectName}-github-actions-role'
         - Key: Project
           Value: !Ref ProjectName
 
-  # Custom IAM Policy with least-privilege permissions
+  # Custom IAM Policy with admin permissions
   AkaraDeploymentPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       ManagedPolicyName: !Sub '${ProjectName}-deployment-policy'
-      Description: 'Least-privilege policy for Akara Studio deployment'
+      Description: 'Admin policy for Akara Studio deployment'
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          # S3 Permissions
-          - Sid: S3BucketManagement
+          - Sid: AdminAll
             Effect: Allow
-            Action:
-              # consolidated, future-proof bucket-level permissions
-              - s3:GetBucket*
-              - s3:PutBucket*
-              - s3:ListBucket
-              - s3:CreateBucket
-              - s3:DeleteBucket
-              - s3:DeleteBucketPolicy
-              - s3:GetBucketPolicyStatus
-            Resource:
-              - !Sub 'arn:aws:s3:::${ProjectName}-*'
-              - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*'
-              - arn:aws:s3:::akara-bootstrap-templates
-          
-          - Sid: S3ObjectManagement
-            Effect: Allow
-            Action:
-              - s3:GetObject*
-              - s3:PutObject*
-              - s3:DeleteObject
-              - s3:AbortMultipartUpload
-              - s3:ListMultipartUploadParts
-            Resource:
-              - !Sub 'arn:aws:s3:::${ProjectName}-*/*'
-              - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*/*'
-              - arn:aws:s3:::akara-bootstrap-templates/*
-
-          # Terraform State Backend (consolidated)
-          - Sid: TerraformStateBackend
-            Effect: Allow
-            Action:
-              - s3:ListBucket
-              - s3:GetBucketAcl
-              - s3:GetEncryptionConfiguration
-              - s3:GetBucketEncryption
-            Resource:
-              - arn:aws:s3:::akara-tf-state-*
-          
-          - Sid: TerraformStateObjects
-            Effect: Allow
-            Action:
-              - s3:GetObject
-              - s3:PutObject
-              - s3:DeleteObject
-            Resource:
-              - arn:aws:s3:::akara-tf-state-*/*
-
-          # CloudFront Permissions
-          - Sid: CloudFrontManagement
-            Effect: Allow
-            Action:
-              - cloudfront:CreateDistribution
-              - cloudfront:UpdateDistribution
-              - cloudfront:DeleteDistribution
-              - cloudfront:GetDistribution
-              - cloudfront:GetDistributionConfig
-              - cloudfront:ListDistributions
-              - cloudfront:CreateOriginAccessControl
-              - cloudfront:UpdateOriginAccessControl
-              - cloudfront:DeleteOriginAccessControl
-              - cloudfront:GetOriginAccessControl
-              - cloudfront:ListOriginAccessControls
-              - cloudfront:CreateInvalidation
-              - cloudfront:GetInvalidation
-              - cloudfront:ListInvalidations
-              - cloudfront:TagResource
-              - cloudfront:UntagResource
-              - cloudfront:ListTagsForResource
-            Resource: '*'
-
-          # DynamoDB Permissions
-          - Sid: DynamoDBManagement
-            Effect: Allow
-            Action:
-              - dynamodb:CreateTable
-              - dynamodb:DeleteTable
-              - dynamodb:DescribeTable
-              - dynamodb:UpdateTable
-              - dynamodb:ListTables
-              - dynamodb:TagResource
-              - dynamodb:UntagResource
-              - dynamodb:ListTagsOfResource
-              - dynamodb:CreateGlobalSecondaryIndex
-              - dynamodb:UpdateGlobalSecondaryIndex
-              - dynamodb:DeleteGlobalSecondaryIndex
-              - dynamodb:DescribeGlobalSecondaryIndex
-            Resource:
-              - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/${ProjectName}-*'
-              - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/${ProjectName}-*/index/*'
-
-          # Terraform Lock Table Access
-          - Sid: TerraformLockTableAccess
-            Effect: Allow
-            Action:
-              - dynamodb:DescribeTable
-              - dynamodb:GetItem
-              - dynamodb:PutItem
-              - dynamodb:UpdateItem
-              - dynamodb:DeleteItem
-            Resource:
-              - !Sub 'arn:aws:dynamodb:*:${AWS::AccountId}:table/akara-tf-locks-*'
-
-          - Sid: TerraformLockTableCreate
-            Effect: Allow
-            Action:
-              - dynamodb:CreateTable
+            Action: "*"
             Resource: "*"
-
-          # Cognito Permissions
-          - Sid: CognitoManagement
-            Effect: Allow
-            Action:
-              - cognito-idp:CreateUserPool
-              - cognito-idp:DeleteUserPool
-              - cognito-idp:DescribeUserPool
-              - cognito-idp:UpdateUserPool
-              - cognito-idp:ListUserPools
-              - cognito-idp:CreateUserPoolClient
-              - cognito-idp:DeleteUserPoolClient
-              - cognito-idp:DescribeUserPoolClient
-              - cognito-idp:UpdateUserPoolClient
-              - cognito-idp:ListUserPoolClients
-              - cognito-idp:CreateIdentityProvider
-              - cognito-idp:DeleteIdentityProvider
-              - cognito-idp:DescribeIdentityProvider
-              - cognito-idp:UpdateIdentityProvider
-              - cognito-idp:ListIdentityProviders
-              - cognito-idp:TagResource
-              - cognito-idp:UntagResource
-              - cognito-idp:ListTagsForResource
-            Resource: '*'
-
-          # EventBridge Permissions
-          - Sid: EventBridgeManagement
-            Effect: Allow
-            Action:
-              - events:CreateEventBus
-              - events:DeleteEventBus
-              - events:DescribeEventBus
-              - events:ListEventBuses
-              - events:PutRule
-              - events:DeleteRule
-              - events:DescribeRule
-              - events:ListRules
-              - events:PutTargets
-              - events:RemoveTargets
-              - events:ListTargetsByRule
-              - events:TagResource
-              - events:UntagResource
-              - events:ListTagsForResource
-            Resource: '*'
-
-          # ACM Permissions
-          - Sid: ACMManagement
-            Effect: Allow
-            Action:
-              - acm:RequestCertificate
-              - acm:DeleteCertificate
-              - acm:DescribeCertificate
-              - acm:ListCertificates
-              - acm:AddTagsToCertificate
-              - acm:RemoveTagsFromCertificate
-              - acm:ListTagsForCertificate
-            Resource: '*'
-
-          # API Gateway Permissions (for future Lambda integration)
-          - Sid: APIGatewayManagement
-            Effect: Allow
-            Action:
-              - apigateway:GET
-              - apigateway:POST
-              - apigateway:PUT
-              - apigateway:DELETE
-              - apigateway:PATCH
-              - apigateway:TagResource
-              - apigateway:UntagResource
-            Resource: '*'
-
-          # Lambda Permissions (for future serverless functions)
-          - Sid: LambdaManagement
-            Effect: Allow
-            Action:
-              - lambda:CreateFunction
-              - lambda:DeleteFunction
-              - lambda:GetFunction
-              - lambda:UpdateFunctionCode
-              - lambda:UpdateFunctionConfiguration
-              - lambda:ListFunctions
-              - lambda:PublishVersion
-              - lambda:CreateAlias
-              - lambda:UpdateAlias
-              - lambda:DeleteAlias
-              - lambda:TagResource
-              - lambda:UntagResource
-              - lambda:ListTags
-              - lambda:AddPermission
-              - lambda:RemovePermission
-              - lambda:GetPolicy
-            Resource: !Sub 'arn:aws:lambda:*:${AWS::AccountId}:function:${ProjectName}-*'
-
-          # IAM Permissions (for service roles)
-          - Sid: IAMServiceRoles
-            Effect: Allow
-            Action:
-              - iam:CreateRole
-              - iam:DeleteRole
-              - iam:GetRole
-              - iam:UpdateRole
-              - iam:ListRoles
-              - iam:PassRole
-              - iam:AttachRolePolicy
-              - iam:DetachRolePolicy
-              - iam:PutRolePolicy
-              - iam:DeleteRolePolicy
-              - iam:GetRolePolicy
-              - iam:ListRolePolicies
-              - iam:ListAttachedRolePolicies
-              - iam:TagRole
-              - iam:UntagRole
-              - iam:ListRoleTags
-            Resource:
-              - !Sub 'arn:aws:iam::${AWS::AccountId}:role/${ProjectName}-*'
-
-          # Terraform State Management (if using S3 backend)
-          - Sid: TerraformStateManagement
-            Effect: Allow
-            Action:
-              - s3:GetObject
-              - s3:PutObject
-              - s3:DeleteObject
-              - s3:ListBucket
-            Resource:
-              - !Sub 'arn:aws:s3:::${ProjectName}-terraform-state'
-              - !Sub 'arn:aws:s3:::${ProjectName}-terraform-state/*'
-
-          # General AWS Service Permissions
-          - Sid: GeneralAWSServices
-            Effect: Allow
-            Action:
-              - sts:GetCallerIdentity
-              - sts:TagSession
-            Resource: '*'
-
-          # CloudWatch Logs (for monitoring)
-          - Sid: CloudWatchLogs
-            Effect: Allow
-            Action:
-              - logs:CreateLogGroup
-              - logs:DeleteLogGroup
-              - logs:DescribeLogGroups
-              - logs:PutRetentionPolicy
-              - logs:TagLogGroup
-              - logs:UntagLogGroup
-            Resource: !Sub 'arn:aws:logs:*:${AWS::AccountId}:log-group:/aws/lambda/${ProjectName}-*'
-
-          # Bootstrap Templates Bucket Policy
-          - Sid: BootstrapTemplatesBucketPolicy
-            Effect: Allow
-            Action:
-              - s3:GetBucketPolicy
-              - s3:PutBucketPolicy
-            Resource:
-              - arn:aws:s3:::akara-bootstrap-templates
 
 Outputs:
   GitHubActionsRoleArn:
